openwebrx (1.2.38) bullseye jammy; urgency=low

  * Fixed primary modulation change with digital decoders.
  * Fixed digital voice panel colors.
  * Fixed volume and mute controls.
  * Fixed NR controls.
  * Added explanation of the RSPdx HDR mode.
  * Updated HPSDR settings to Jakob's latest version.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 13 Nov 2023 16:12:00 +0000

openwebrx (1.2.37) bullseye jammy; urgency=low

  * Added "Settings" UI section for configuring user interface.
  * Saving receiver and map UI settings in the browser storage.
  * Removed themes, opacity, frame, wheel options from server settings.
  * Animated UI sections collapse and expansion.
  * Added RTTY, NAVTEX, and MSI bookmarks at proper offsets.
  * Added "Black" UI theme.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 11 Nov 2023 16:12:00 +0000

openwebrx (1.2.36) bullseye jammy; urgency=low

  * Added several UI themes, switched via "User interface color scheme".
  * Made text console window contain more text (RTTY, CW, etc).
  * Added nano-scroller to the text console window.
  * Switched back to LRGB for mixing locator colors.
  * Renamed "Range" section to "Display".

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 4 Nov 2023 16:12:00 +0000

openwebrx (1.2.35) bullseye jammy; urgency=low

  * Added SITOR-B / NAVTEX decoder.
  * Fixed AIS map information bubbles.
  * Used underscores for unrecognized CW/RTTY characters.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 28 Oct 2023 16:12:00 +0000

openwebrx (1.2.34) bullseye jammy; urgency=low

  * Reworked locator info, adding colored band/mode designators.
  * Improved locator square colors to also reflect reports' age.
  * Linked HAM callsigns and AIS vessel IDs to respective websites.
  * Added country name tooltips to HAM callsigns and AIS vessel IDs.
  * Hopefully fixed FAX decoder randomly restarting on a new page.
  * Moved common JavaScript functions to Utils.js.
  * Fixed links on HFDL flight reports.