@@ -1,6 +1,7 @@
 openwebrx (1.2.38) bullseye jammy; urgency=low
 
   * Fixed primary modulation change with digital decoders.
+  * Fixed secondary frequency when changing bandpass.
   * Fixed digital voice panel colors.
   * Fixed volume and mute controls.
   * Fixed NR controls.
